[package]
name = "configr"
description = "The dead easy way to use config files in your project"
version = "0.5.0"
authors = ["Carsten K. Jørgensen <carsten@kragelund.dev>"]
repository = "https://github.com/nyxiative/configr"
license-file = "LICENSE"
readme = "README.md"
categories = ["config", "filesystem"]
keywords = ["config", "crossplatform", "cross-platform", "easy", "config file", "configfile"]
edition = "2018"

[dependencies]
dirs = "3.0.2"
serde = {version = "1.0.125", features = ["derive"]}
snafu = "0.6.10"
toml = "0.5.8"
configr_derive = "0.5.0"