[package]
name = "configr_derive"
version = "0.5.0"
edition = "2018"
description = "The dead easy way to use config files in your project"
authors = ["Carsten K. Jørgensen <carsten@kragelund.dev>"]
repository = "https://github.com/nyxiative/configr"
license-file = "../LICENSE"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
